adding adjustment to screen elements

--- a/index.html
+++ b/index.html
@@ -29,42 +29,42 @@
 
       .info-container {
         position: absolute;
-        top: 20px;
-        left: 20px;
+        top: max(env(safe-area-inset-top, 10px), 2vh);
+        left: max(env(safe-area-inset-left, 10px), 2vw);
         display: flex;
         flex-direction: column;
-        gap: 5px;
+        gap: min(5px, 1vh);
         z-index: 10;
       }
 
       .info {
         position: relative;
         color: #e2e8f0;
-        font-size: 1.1rem;
+        font-size: clamp(0.8rem, 2.5vw, 1.1rem);
         text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
         background: rgba(0, 0, 0, 0.4);
-        padding: 10px 15px;
+        padding: clamp(6px, 1.5vh, 10px) clamp(8px, 2vw, 15px);
         border-radius: 8px;
         backdrop-filter: blur(5px);
       }
 
       .hearts {
         position: absolute;
-        top: 20px;
-        right: 20px;
+        top: max(env(safe-area-inset-top, 10px), 2vh);
+        right: max(env(safe-area-inset-right, 10px), 2vw);
         z-index: 10;
         display: flex;
-        gap: 12px;
+        gap: clamp(6px, 1.5vw, 12px);
         background: rgba(0, 0, 0, 0.4);
-        padding: 10px 15px;
+        padding: clamp(6px, 1.5vh, 10px) clamp(8px, 2vw, 15px);
         border-radius: 8px;
         backdrop-filter: blur(5px);
       }
 
       .heart {
-        width: 40px;
-        height: 40px;
-        filter: drop-shadow(0 0 5px rgba(0, 0, 0, 0.5));
+        width: clamp(20px, 6vw, 40px);
+        height: clamp(20px, 6vw, 40px);
+        filter: drop-shadow(0 0 3px rgba(0, 0, 0, 0.5));
         transition: transform 0.3s ease;
       }
 
@@ -84,8 +84,8 @@
 
       .game-button {
         position: absolute;
-        padding: 12px 24px;
-        font-size: 1.1rem;
+        padding: clamp(8px, 2vh, 12px) clamp(16px, 3vw, 24px);
+        font-size: clamp(0.9rem, 2.5vw, 1.1rem);
         font-weight: 500;
         color: #fff;
         background: linear-gradient(135deg, #4a90e2 0%, #357abd 100%);
@@ -150,28 +150,29 @@
       }
 
       .overlay h1 {
-        font-size: 3.5rem;
+        font-size: clamp(1.8rem, 6vw, 3.5rem);
+        margin-bottom: clamp(0.8rem, 2vh, 1.5rem);
         font-weight: 700;
         color: #fff;
-        margin-bottom: 1.5rem;
+
         text-transform: uppercase;
         letter-spacing: 2px;
         text-shadow: 0 0 20px rgba(74, 144, 226, 0.5);
       }
 
       .overlay p {
-        font-size: 1.2rem;
+        font-size: clamp(0.9rem, 2.5vw, 1.2rem);
+        margin-bottom: clamp(1rem, 3vh, 2rem);
+        padding: 0 clamp(10px, 3vw, 20px);
         color: #e2e8f0;
-        margin-bottom: 2rem;
         text-align: center;
         line-height: 1.6;
         max-width: 600px;
-        padding: 0 20px;
       }
 
       .overlay button {
-        padding: 15px 40px;
-        font-size: 1.2rem;
+        padding: clamp(10px, 2vh, 15px) clamp(20px, 4vw, 40px);
+        font-size: clamp(0.9rem, 2.5vw, 1.2rem);
         font-weight: 500;
         color: #fff;
         background: linear-gradient(135deg, #4a90e2 0%, #357abd 100%);
@@ -191,9 +192,9 @@
       }
 
       .score {
-        font-size: 2.5rem;
+        font-size: clamp(1.5rem, 5vw, 2.5rem);
+        margin-bottom: clamp(0.8rem, 2vh, 1.5rem);
         color: #4a90e2;
-        margin-bottom: 1.5rem;
         text-shadow: 0 0 10px rgba(74, 144, 226, 0.5);
       }
 
