--- a/index.html
+++ b/index.html
@@ -337,17 +337,28 @@
     </button>
 
     <script>
+      // Canvas Scaling
+      const REFERENCE_WIDTH = 1920; // Reference desktop width
+      const REFERENCE_HEIGHT = 1080; // Reference desktop height
+      const SCALE_MINIMUM = 0.4;
+      let gameScale = 1;
+
+      const RADIUS_PLAYER = 30;
+      const RADIUS_ZOMBIE = 20;
+      const RADIUS_BULLET = 10;
+      const RADIUS_POWERUP = 30;
+
       // SVG templates for hearts
       const fullHeartSVG = `
-        <svg class="heart" viewBox="0 0 24 24">
-        <path class="heart-full" d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/>
-        </svg>`;
+              <svg class="heart" viewBox="0 0 24 24">
+              <path class="heart-full" d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/>
+              </svg>`;
 
       const brokenHeartSVG = `
-        <svg class="heart" viewBox="0 0 24 24">
-        <path class="heart-broken" d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/>
-        <path class="heart-broken" d="M12 5L9 9h6l-3 4"/>
-        </svg>`;
+              <svg class="heart" viewBox="0 0 24 24">
+              <path class="heart-broken" d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/>
+              <path class="heart-broken" d="M12 5L9 9h6l-3 4"/>
+              </svg>`;
 
       // SVG for Heart
       const HEART_PATH =
@@ -376,7 +387,7 @@
       const player = {
         x: canvas.width / 2,
         y: canvas.height / 2,
-        radius: 20,
+        radius: RADIUS_PLAYER,
         color: "blue",
         direction: { x: 0, y: 1 },
         hearts: 3,
@@ -386,12 +397,12 @@
 
       // Variables for Zombies
       const zombies = [];
-      const zombieSpeed = 2;
+      const SPEED_ZOMBIE = 3;
       let zombiesDefeated = 0;
 
       // Variables for Bullets
       const bullets = [];
-      const bulletSpeed = 10;
+      const SPEED_BULLET = 10;
 
       // Variables for Accelerometer
       let tiltX = 0;
@@ -415,6 +426,97 @@
       // Add cooldown configuration
       const SHOOT_COOLDOWN = 300; // 0.3 seconds cooldown
       let lastShootTime = 0;
+
+      // Hidden feature
+      player.consecutiveHearts = 0;
+      player.isRainbowMode = false;
+      player.rainbowModeDuration = 5000;
+
+      // Function to trigger the rainbow effect
+      function triggerRainbowMode() {
+        if (player.isRainbowMode) return;
+
+        player.isRainbowMode = true;
+        player.invulnerable = true;
+
+        // Apply rainbow effect
+        let rainbowInterval = setInterval(() => {
+          player.color = `hsl(${Math.random() * 360}, 100%, 50%)`;
+        }, 100);
+
+        // Shoot bullets in all directions
+        let rainbowShootInterval = setInterval(() => {
+          for (let i = 0; i < 8; i++) {
+            bullets.push({
+              x: player.x,
+              y: player.y,
+              direction: {
+                x: Math.cos((i / 8) * Math.PI * 2),
+                y: Math.sin((i / 8) * Math.PI * 2),
+              },
+              radius: RADIUS_BULLET * gameScale,
+              color: "yellow",
+            });
+          }
+        }, 300);
+
+        // Stop rainbow mode after duration
+        setTimeout(() => {
+          player.isRainbowMode = false;
+          player.invulnerable = false;
+          clearInterval(rainbowInterval);
+          clearInterval(rainbowShootInterval);
+          player.color = "blue"; // Reset to default color
+        }, player.rainbowModeDuration);
+      }
+
+      function setCanvasDimensions() {
+        canvas.width = window.innerWidth;
+        canvas.height = window.innerHeight;
+      }
+
+      function setGameScale() {
+        const scaleX = canvas.width / REFERENCE_WIDTH;
+        const scaleY = canvas.height / REFERENCE_HEIGHT;
+        const scale = Math.min(scaleX, scaleY);
+        if (scale < SCALE_MINIMUM) {
+          gameScale = SCALE_MINIMUM;
+        } else {
+          gameScale = scale;
+        }
+      }
+
+      // Scale elements proportionally based on canvas size
+      function scaleGameElements() {
+        setGameScale();
+
+        // Maintain aspect ratio
+        const scale = gameScale;
+
+        // Scale player
+        player.radius = RADIUS_PLAYER * scale;
+
+        // Scale zombies
+        zombies.forEach((zombie) => {
+          zombie.radius = RADIUS_ZOMBIE * scale;
+        });
+
+        // Scale bullets
+        bullets.forEach((bullet) => {
+          bullet.radius = RADIUS_BULLET * scale;
+        });
+
+        // Scale power-ups
+        powerups.forEach((powerup) => {
+          powerup.radius = RADIUS_POWERUP * scale;
+        });
+      }
+
+      function handleResize() {
+        setCanvasDimensions();
+        scaleGameElements();
+        updateUIElementsPosition();
+      }
 
       function handleMouseMove(event) {
         const x = (event.clientX / window.innerWidth) * 180 - 90;
@@ -582,7 +684,7 @@
         ctx.rotate(angle);
 
         // Update pulse effect if invulnerable
-        if (player.invulnerable) {
+        if (player.invulnerable && !player.isRainbowMode) {
           player.pulsePhase += player.pulseSpeed;
           // Calculate red intensity based on sine wave
           const pulseIntensity = Math.sin(player.pulsePhase) * 0.5 + 0.5; // Values between 0 and 1
@@ -657,7 +759,7 @@
         zombies.push({
           x,
           y,
-          radius: 10,
+          radius: RADIUS_ZOMBIE * gameScale,
           color: "red",
           direction: { x: 0, y: 0 }, // Initialize direction
         });
@@ -697,8 +799,8 @@
           const dy = player.y - zombie.y;
           const dist = Math.sqrt(dx * dx + dy * dy);
 
-          zombie.x += (dx / dist) * zombieSpeed;
-          zombie.y += (dy / dist) * zombieSpeed;
+          zombie.x += (dx / dist) * SPEED_ZOMBIE;
+          zombie.y += (dy / dist) * SPEED_ZOMBIE;
 
           // Update zombie direction
           zombie.direction.x = dx / dist;
@@ -729,7 +831,7 @@
               x: Math.cos(baseAngle + i * spread),
               y: Math.sin(baseAngle + i * spread),
             },
-            radius: 5,
+            radius: RADIUS_BULLET * gameScale,
             color: "yellow",
           });
         }
@@ -751,8 +853,8 @@
       function updateBullets() {
         for (let i = bullets.length - 1; i >= 0; i--) {
           const bullet = bullets[i];
-          bullet.x += bullet.direction.x * bulletSpeed;
-          bullet.y += bullet.direction.y * bulletSpeed;
+          bullet.x += bullet.direction.x * SPEED_BULLET;
+          bullet.y += bullet.direction.y * SPEED_BULLET;
 
           // Remove bullets that go out of bounds
           if (
@@ -775,7 +877,7 @@
         powerups.push({
           x,
           y,
-          radius: 15,
+          radius: RADIUS_POWERUP * gameScale,
           collected: false,
           creation: Date.now(),
           pulsePhase: 0,
@@ -829,6 +931,13 @@
             // Collect power-up
             player.hearts = 3;
             updateHeartsDisplay();
+
+            // Increment consecutive hearts and check for rainbow mode
+            player.consecutiveHearts++;
+            if (player.consecutiveHearts >= 3) {
+              triggerRainbowMode();
+              player.consecutiveHearts = 0; // Reset counter after triggering
+            }
 
             // Add collection effect
             createCollectionEffect(powerup.x, powerup.y);
@@ -930,6 +1039,7 @@
           if (dist < player.radius + zombie.radius && !player.invulnerable) {
             player.hearts--;
             updateHeartsDisplay();
+            player.consecutiveHearts = 0;
 
             if (player.hearts <= 0) {
               gameStarted = false;
@@ -1098,8 +1208,7 @@
       // Handle orientation changes
       window.addEventListener("orientationchange", () => {
         // Update canvas dimensions
-        canvas.width = window.innerWidth;
-        canvas.height = window.innerHeight;
+        setCanvasDimensions();
 
         // Reset player position to center when orientation changes
         player.x = canvas.width / 2;
@@ -1114,10 +1223,7 @@
       });
 
       // Handle window resizing
-      window.addEventListener("resize", () => {
-        canvas.width = window.innerWidth;
-        canvas.height = window.innerHeight;
-      });
+      window.addEventListener("resize", handleResize);
 
       // Helper function to update UI elements position
       function updateUIElementsPosition() {
@@ -1144,6 +1250,7 @@
       }
 
       function init() {
+        handleResize();
         setInterval(() => {
           if (gameStarted && !paused && controlMode != "none") {
             spawnZombie();
@@ -1158,12 +1265,12 @@
       // Add this to your existing CSS
       const style = document.createElement("style");
       style.textContent = `
-@keyframes pulse {
-    0% { transform: scale(1); }
-    50% { transform: scale(1.1); }
-    100% { transform: scale(1); }
-}
-`;
+      @keyframes pulse {
+          0% { transform: scale(1); }
+          50% { transform: scale(1.1); }
+          100% { transform: scale(1); }
+      }
+      `;
       document.head.appendChild(style);
 
       init();
